Clarify project description

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: adaptify
-description: A library for adaptive code execution with Dart.
+description: A library for adaptive decision-making with Dart.
 version: 0.0.1
 author: Daniel Bälz <me@dbaelz.de>
 #homepage: https://www.example.com
